# SwiftScript

./: .gitignore  GRAMMAR_TODO.md  README.md  SwiftScript.slnx  SwiftScript.vcxproj  SwiftScript.vcxproj.filters  SwiftScriptLib.cpp  SwiftScriptLib.vcxproj  SwiftScriptLib.vcxproj.filters  SwiftScriptServer.vcxproj  SwiftScriptServer.vcxproj.filters  Swive.slnx  pch_.cpp  pch_.h  test_gen_simple.swift  test_tuple.swift  testlog.txt
ScriptProjTest/: project.ssproject
docs/: DAP_IMPLEMENTATION_PLAN.md  SwiftScript_Language_Reference.md  Swive_Language_Reference.md  enum-implementation-status.md  protocol-implementation.md
include/: ss_ast.hpp  ss_chunk.hpp  ss_compiler.hpp  ss_core.hpp  ss_lexer.hpp  ss_opcodes.hpp  ss_parser.hpp  ss_project.hpp  ss_project_resolver.hpp  ss_runner.hpp  ss_token.hpp  ss_type_checker.hpp  ss_value.hpp  ss_vm.hpp  ss_vm_opcodes.inl
server_include/: analyzer.hpp  lsp_connection.hpp  module_resolver.hpp
server_src/: analyzer.cpp  module_resolver.cpp
src/: ss_ast_clone.cpp  ss_chunk.cpp  ss_compiler.cpp  ss_core.cpp  ss_parser.cpp  ss_project.cpp  ss_vm.cpp  (+4 more)
test/: CMakeLists.txt  MIGRATION_GUIDE.md  QUICKSTART.md  README_TESTS.md  SUMMARY.md  test_access_control.cpp  test_all_tests.hpp  test_basic.cpp  test_class.cpp  test_closure.cpp  test_enum.cpp  test_extension.cpp  test_gtest.cpp  test_helpers.hpp  test_helpers_example.cpp  test_import.cpp  test_let.cpp  test_minimal.cpp  test_new_features.cpp  test_object.cpp  test_optional.cpp  test_pattern_matching.cpp  test_phase1.cpp  test_project_runner.cpp  test_protocol.cpp  test_simple.cpp  test_struct.cpp  test_switch.cpp  test_tuple.cpp  test_vm.cpp
test/docs/: CHECKLIST.md
(+121 files in other folders)
